--- a/src/components/clock/clock.html
+++ b/src/components/clock/clock.html
@@ -1,19 +1,19 @@
 <!-- Generated template for the ClockComponent component -->
-<div>
-  <DIV class="clkbkg"></DIV>
-  <DIV class="g1 rotateCog"></DIV>
-  <DIV class="g2 rotateGears"></DIV>
-  <DIV class="g3"></DIV>
-  <DIV class="g4 rotateGears"></DIV>
-  <DIV class="g5 rotateGears"></DIV>
-  <DIV class="g6 rotateGears2"></DIV>
-  <DIV class="g10 rotateGears2"></DIV>
-  <DIV class="g8 rotateGears"></DIV>
-  <DIV class="g9 rotateGears2"></DIV>
-  <DIV class="g10 rotateGears2"></DIV>
-  <DIV class="g11"></DIV>
-  <DIV class="clock"></DIV>
-  <DIV class="secondsHnd rotateSeconds"></DIV>
-  <DIV class="minutesHnd rotateMinutes"></DIV>
-  <DIV class="hoursHnd rotateHours"> </DIV>
+<div class="clock-steampunk">
+  <div class="clkbkg"></div>
+  <div class="g1 rotateCog"></div>
+  <div class="g2 rotateGears"></div>
+  <div class="g3"></div>
+  <div class="g4 rotateGears"></div>
+  <div class="g5 rotateGears"></div>
+  <div class="g6 rotateGears2"></div>
+  <div class="g10 rotateGears2"></div>
+  <div class="g8 rotateGears"></div>
+  <div class="g9 rotateGears2"></div>
+  <div class="g10 rotateGears2"></div>
+  <div class="g11"></div>
+  <div class="clock"></div>
+  <div class="secondsHnd rotateSeconds"></div>
+  <div class="minutesHnd rotateMinutes"></div>
+  <div class="hoursHnd rotateHours"> </div>
 </div>
