--- a/src/components/clock/clock.scss
+++ b/src/components/clock/clock.scss
@@ -1,4 +1,11 @@
 clock {
+  * {
+    position: absolute;
+  }
+  display: flex;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
   .rotateGears {
     -webkit-animation-name: rotate1;
     animation-name: rotate1;
@@ -57,7 +64,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/gearsSmll.png");
+    background: url("/assets/images/clock/gears.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -73,7 +80,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g1Smll.png");
+    background: url("/assets/images/clock/g1.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -92,7 +99,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g9-16Smll.png");
+    background: url("/assets/images/clock/g9-16.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -111,7 +118,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g3Smll.png");
+    background: url("/assets/images/clock/g3.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -128,7 +135,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g9-16Smll.png");
+    background: url("/assets/images/clock/g9-16.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -147,7 +154,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g5-8Smll.png");
+    background: url("/assets/images/clock/g5-8.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -166,7 +173,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g6-18Smll.png");
+    background: url("/assets/images/clock/g6-18.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -185,7 +192,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g9-8Smll.png");
+    background: url("/assets/images/clock/g9-8.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -219,7 +226,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/g4-7Smll.png");
+    background: url("/assets/images/clock/g4-7.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -238,7 +245,7 @@ clock {
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/910-8Smll.png");
+    background: url("/assets/images/clock/910-8.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -250,16 +257,19 @@ clock {
     left: 121px !important;
   }
   .g11 {
-    top: 50px;
-    left: 50px;
-    position: relative;
+    // top: 50px;
+    // left: 50px;
+    // position: relative;
+    top: 0px;
+    // left: 0px;
+    position: absolute;
     border-radius: 175px !important;
     width: 350px !important;
     height: 350px !important;
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/roman-num.png");
+    background: url("/assets/images/clock/roman-num.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -267,6 +277,9 @@ clock {
     z-index: 40 !important;
   }
   .rotateHours {
+    position: absolute;
+    top: 0px;
+    // left: 0px;
     -webkit-animation-name: rotate1;
     animation-name: rotate1;
     -webkit-animation-timing-function: linear;
@@ -286,6 +299,8 @@ clock {
     animation-duration: 43200s !important;
   }
   .rotateMinutes {
+    position: absolute;
+    top: 0px;
     -webkit-animation-name: TicToc3;
     animation-name: TicToc3;
     -webkit-animation-timing-function: linear;
@@ -305,6 +320,8 @@ clock {
     animation-duration: 3600s !important;
   }
   .rotateSeconds {
+    position: absolute;
+    top: 0px;
     -webkit-animation-name: TicToc3;
     animation-name: TicToc3;
     -webkit-animation-timing-function: linear;
@@ -324,6 +341,8 @@ clock {
     animation-duration: 60s !important;
   }
   .rotateSeconds2 {
+    position: absolute;
+    top: 0px;
     -webkit-animation-name: TicToc3;
     animation-name: TicToc3;
     -webkit-animation-timing-function: linear;
@@ -348,16 +367,18 @@ clock {
     left: 0;
   }
   .clock {
-    top: 50px;
-    left: 50px;
-    position: relative;
+    // top: 50px;
+    // left: 50px;
+    // position: relative;
+    position: absolute;
+    top: 0px;
     border-radius: 175px !important;
     width: 350px !important;
     height: 350px !important;
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/clockSmll.png");
+    background: url("/assets/images/clock/clock.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -365,13 +386,15 @@ clock {
     z-index: 49 !important;
   }
   .secondsHnd {
+    position: absolute;
+    top: 0px;
     border-radius: 175px !important;
     width: 350px !important;
     height: 350px !important;
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/SecondsHandSmll.png");
+    background: url("/assets/images/clock/SecondsHand.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -379,13 +402,15 @@ clock {
     z-index: 48 !important;
   }
   .minutesHnd {
+    position: absolute;
+    top: 0px;
     border-radius: 175px !important;
     width: 350px !important;
     height: 350px !important;
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/LittleHandSmll.png");
+    background: url("/assets/images/clock/LittleHand.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
@@ -393,13 +418,15 @@ clock {
     z-index: 47 !important;
   }
   .hoursHnd {
+    position: absolute;
+    top: 0px;
     border-radius: 175px !important;
     width: 350px !important;
     height: 350px !important;
     box-sizing: border-box !important;
     margin: 0px !important;
     padding: 0px !important;
-    background: url("./images/BigHandSmll.png");
+    background: url("/assets/images/clock/BigHand.png");
     background-origin: border-box !important;
     background-repeat: no-repeat;
     background-position: center;
